--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
   <title>Joint team project - Dating site</title>
 
   <link rel="stylesheet" type="text/css" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="lib/bower_components/bootstrap-social/bootstrap-social.css">
+  <link rel="stylesheet" type="text/css" href="lib/bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
-<body>
-  <h1>PLEASE DATE ME</h1>
+<div class="jumbotron">
+  <div class="container">
+    <div class="col-md-12">
+    <h1 id="appTitle">PlayDate</h1>
+    <a href="#" class="btn btn-social-icon btn-xl btn-facebook"><i class="fa vert fa-facebook"></i></a>
+    <a href="#" class="btn btn-social-icon btn-xl btn-github"><i class="fa vert fa-github"></i></a>
+    </div>
+  </div>
+</div>
+
   
   <script data-main="javascripts/dating-site" src="lib/bower_components/requirejs/require.js"></script>
 
