header image added - needs credit at bottom removed from image

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
   <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
+<div id="header" class="col-md-12"><img src="images/dog-breeds.png"></div>
+<div class="col-md-12"><h1>Welcome to Doggie Dates!!!</h1></div>
+<div class="col-md-12"><h3>Where dogs go to romp</h3></div>
+
 <div class="jumbotron">
   <div class="container">
     <div class="col-md-12">
-    <h1 id="appTitle">PlayDate</h1>
+    <!-- <h1 id="appTitle">PlayDate</h1> -->
     <a href="#" class="btn btn-social-icon btn-xl btn-facebook"><i class="fa vert fa-facebook"></i></a>
     <a href="#" class="btn btn-social-icon btn-xl btn-github"><i class="fa vert fa-github"></i></a>
     </div>
