Added input field for the user to paste in an image URL

--- a/AddProfile.html
+++ b/AddProfile.html
@@ -13,8 +13,12 @@
     <form action="form.html" method="POST">
       <fieldset>
         <legend>Tell us about yourself</legend>
-        <label for="Name" >Enter your name</label>
-          <input id = "dog_name" type="text" name="first-name" autofocus>
+
+        <label for="name" >Enter your name</label>
+          <input id = "dog_name" type="text" name="name" autofocus>
+          <br/>
+        <label for="image" >Paste a link to a pic</label>
+          <input id = "dog_pic" type="text" name="image" autofocus>
           <br/>
           <input class = "sex" id = "sex_male" type="radio" name="sex" value="male" checked> Male
           <br>
