--- a/dog-pack.html
+++ b/dog-pack.html
@@ -23,7 +23,7 @@
     </div>
   </div>
 </div>
-<script data-main="javascripts/entry" src="./lib/bower_components/requirejs/require.js"></script>
+<script data-main="javascripts/dating-site" src="./lib/bower_components/requirejs/require.js"></script>
 <script src="./lib/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="./lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
