Dog Pack page is displaying

--- a/AddProfile.html
+++ b/AddProfile.html
@@ -22,7 +22,7 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Dog Pack</a></li>
+          <li><a href="PackPage.html">Dog Pack</a></li>
           <li><a href="MyPack.html">Dog Bones</a></li>
           <li><a href="AddProfile.html">My Pawfile</a></li>
         </ul>
