--- a/MyPack.html
+++ b/MyPack.html
@@ -18,8 +18,8 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="dog-pack.html">Dog Pack</a></li>
-          <li><a href="MyPack.html">Dog Bones</a></li>
+          <li><a href="PackPage.html">Dog Pack</a></li>
+          <li><a href="#">Dog Bones</a></li>
           <li><a href="AddProfile.html">Add Pawfile</a></li>
         </ul>
       </div><!--/.nav-collapse -->
@@ -27,22 +27,9 @@
   </div>
 
 <body>
-<div class="col-md-12"><h1>The Dog Pack</h1></div>
-<div id="results" class="col-md-12"></div>  <!-- blank DIV for handlebars template -->
-  <!--  BOOTSTRAP WINDOW FOR POPUP OF CANDIDATE DETAILS -->
-<div class="modal fade" id="candidatePopup">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      </div>
-      <div class="modal-body"></div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
+
+<div id="results"></div>
+
 <script data-main="javascripts/dating-site" src="./lib/bower_components/requirejs/require.js"></script>
 <script src="./lib/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="./lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
