misc testing to Deric code

--- a/AddProfile.html
+++ b/AddProfile.html
@@ -26,6 +26,7 @@
           <li><a href="PackPage.html">Dog Pack</a></li>
           <li><a href="MyPack.html">Dog Bones</a></li>
           <li><a href="AddProfile.html">Add Pawfile</a></li>
+          <li id="sign-out"><a href="/">Sign Out</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
