--- a/MyPack.html
+++ b/MyPack.html
@@ -21,6 +21,8 @@
           <li><a href="PackPage.html">Dog Pack</a></li>
           <li><a href="#">Dog Bones</a></li>
           <li><a href="AddProfile.html">Add Pawfile</a></li>
+          <li id="sign-out"><a href="#">Sign Out</a></li>
+ 
         </ul>
       </div><!--/.nav-collapse -->
     </div>
