--- a/PackPage.html
+++ b/PackPage.html
@@ -26,6 +26,8 @@
         <li><a href="#">Dog Pack</a></li>
         <li><a href="MyPack.html">Dog Bones</a></li>
         <li><a href="AddProfile.html">My Pawfile</a></li>
+        <li id="sign-out"><a href="/">Sign Out</a></li>
+ 
       </ul>
     </div><!--/.nav-collapse -->
   </div>
