--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
   <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
+<!-- HTML for the Navigation bar that will appear at the top of every page -->
+
+ <div class="navbar navbar-inverse navbar-static-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
+        <a class="navbar-brand" href="#">PlayDate</a>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li id="dog-pack"><a href="#">Dog Pack</a></li>
+          <li id="dog-bones"><a href="#">Dog Bones</a></li>
+          <li id="pawfile"><a href="#">Add Pawfile</a></li>
+          <li id="sign-out"><a href="/">Sign Out</a></li>
+        </ul>
+      </div><!--/.nav-collapse -->
+    </div>
+  </div>
+
+
 <div id="header" class="col-md-12"><img src="images/dog-breeds.png"></div>
 <div class="col-md-12"><h1>Welcome to Doggie Dates!!!</h1></div>
 <div class="col-md-12"><h3>Where dogs go to romp</h3></div>
@@ -26,7 +51,9 @@
 </div>
 
 
-  <div id="results"></div>
+
+
+  <div id="landing-page"></div>
 
   
   <script data-main="javascripts/dating-site" src="lib/bower_components/requirejs/require.js"></script>
